# Agentic-AI-Tasks

./: README.md  main.py
03-Litellm-agent/01-litellm/myproject/src/: hello.py
03-Litellm-agent/03-lite_llm_SDK/: lite_llm_sdk..ipynb
explore-uv/: pyproject.toml
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat  activate.csh  activate.fish  activate.nu
